[styling] fix uneven horizontal positioning of reply slide-down div

--- a/network/static/network/styles.css
+++ b/network/static/network/styles.css
@@ -412,9 +412,9 @@ hr {
 .post-reply-div {
     display: flex;
     flex-direction: column;
-    margin-left: 24px;
-    margin-right: 12px;
-    margin-bottom: 16px;
+    margin-left: 16px;
+    margin-right: 16px;
+    margin-bottom: 8px;
     padding: 12px 12px 12px 12px;
     background-color: var(--color-box-bg);
     border: 1px solid var(--color-box-border);
